--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "progress": "^2.0.3",
     "yargs": "^17.5.1",
     "ytdl-core": "^4.11.2"
   }
