--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "progress": "^2.0.3",
+    "sanitize-filename": "^1.6.3",
     "yargs": "^17.5.1",
     "ytdl-core": "^4.11.2"
   }
