Fixed queue download interface + add log generation settings

--- a/configs.json
+++ b/configs.json
@@ -1,1 +1,1 @@
-{"dir":"D:\\Programacao\\yt-downloader-cli\\downloads"}
+{"dir":"D:\\Programacao\\yt-downloader-cli\\downloads","generateLogs":true}
