--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "sanitize-filename": "^1.6.3",
     "yargs": "^17.5.1",
     "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.1"
   }
 }
