--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Youtube Downloader via CLI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn --watch src ./src/index.ts"
   },
   "author": "Augusto",
   "license": "ISC",
@@ -12,10 +14,14 @@
     "chalk": "^4.1.2",
     "progress": "^2.0.3",
     "sanitize-filename": "^1.6.3",
-    "yargs": "^17.5.1",
-    "ytdl-core": "^4.11.2"
+    "yargs": "^17.7.2",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "eslint": "^8.23.1"
+    "@types/progress": "^2.0.7",
+    "@types/yargs": "^17.0.32",
+    "eslint": "^8.23.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2"
   }
 }
