--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "yt-downloader-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Youtube Downloader via CLI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "ts-node-dev --respawn --watch src ./src/index.ts"
   },
-  "author": "Augusto",
+  "author": "Augusto Frade",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
