--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "jsonschema": "^1.4.1",
     "progress": "^2.0.3",
     "sanitize-filename": "^1.6.3",
     "yargs": "^17.7.2",
