--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "author": "Augusto Frade",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "chalk": "^4.1.2",
     "jsonschema": "^1.4.1",
     "progress": "^2.0.3",
     "sanitize-filename": "^1.6.3",
-    "yargs": "^17.7.2",
-    "ytdl-core": "^4.11.5"
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/progress": "^2.0.7",
