--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/progress": "^2.0.7",
     "@types/yargs": "^17.0.32",
     "eslint": "^8.23.1",
+    "prettier": "3.5.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   }
